@@ -123,9 +123,11 @@ public class DynamicTaskMapper implements TaskMapper {
                 .orElseThrow(
                         () -> {
                             String reason =
-                                    String.format(
-                                            "Cannot map a dynamic task based on the parameter and input. "
-                                                    + "Parameter= %s, input= %s",
+                                    (
+                                            """
+                                            Cannot map a dynamic task based on the parameter and input. \
+                                            Parameter= %s, input= %s\
+                                            """).formatted(
                                             taskNameParam, taskInput);
                             return new TerminateWorkflowException(reason);
                         });
@@ -150,8 +152,8 @@ public class DynamicTaskMapper implements TaskMapper {
                                         .orElseThrow(
                                                 () -> {
                                                     String reason =
-                                                            String.format(
-                                                                    "Invalid task specified.  Cannot find task by name %s in the task definitions",
+                                                            
+                                                                    "Invalid task specified.  Cannot find task by name %s in the task definitions".formatted(
                                                                     workflowTask.getName());
                                                     return new TerminateWorkflowException(reason);
                                                 }));
