@@ -83,8 +83,8 @@ public class UserDefinedTaskMapper implements TaskMapper {
                                                 .orElseThrow(
                                                         () -> {
                                                             String reason =
-                                                                    String.format(
-                                                                            "Invalid task specified. Cannot find task by name %s in the task definitions",
+                                                                    
+                                                                            "Invalid task specified. Cannot find task by name %s in the task definitions".formatted(
                                                                             workflowTask.getName());
                                                             return new TerminateWorkflowException(
                                                                     reason);
