@@ -104,8 +104,8 @@ public class SimpleTaskMapperTest {
         // then
         expectedException.expect(TerminateWorkflowException.class);
         expectedException.expectMessage(
-                String.format(
-                        "Invalid task. Task %s does not have a definition",
+                
+                        "Invalid task. Task %s does not have a definition".formatted(
                         workflowTask.getName()));
 
         // when
