@@ -847,7 +847,7 @@ public class ElasticSearchRestDAOV6 extends ElasticSearchBaseDAO implements Inde
 
         SearchResult<String> taskSearchResult =
                 searchTasks(
-                        String.format("(taskId='%s') AND (workflowId='%s')", taskId, workflowId),
+                        "(taskId='%s') AND (workflowId='%s')".formatted(taskId, workflowId),
                         "*",
                         0,
                         1,
