@@ -65,7 +65,7 @@ abstract class ElasticSearchRestDaoBaseTest extends ElasticSearchTest {
         String line;
         while ((line = bufferedReader.readLine()) != null) {
             String[] fields = line.split("\\s");
-            String endpoint = String.format("/%s", fields[2]);
+            String endpoint = "/%s".formatted(fields[2]);
 
             restClient.performRequest("DELETE", endpoint);
         }
