@@ -92,9 +92,11 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
     public List<TaskModel> getPendingTasksByWorkflow(String taskDefName, String workflowId) {
         // @formatter:off
         String GET_IN_PROGRESS_TASKS_FOR_WORKFLOW =
-                "SELECT json_data FROM task_in_progress tip "
-                        + "INNER JOIN task t ON t.task_id = tip.task_id "
-                        + "WHERE task_def_name = ? AND workflow_id = ? FOR SHARE";
+                """
+                SELECT json_data FROM task_in_progress tip \
+                INNER JOIN task t ON t.task_id = tip.task_id \
+                WHERE task_def_name = ? AND workflow_id = ? FOR SHARE\
+                """;
         // @formatter:on
 
         return queryWithTransaction(
@@ -276,9 +278,11 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
         Preconditions.checkNotNull(taskName, "task name cannot be null");
         // @formatter:off
         String GET_IN_PROGRESS_TASKS_FOR_TYPE =
-                "SELECT json_data FROM task_in_progress tip "
-                        + "INNER JOIN task t ON t.task_id = tip.task_id "
-                        + "WHERE task_def_name = ? FOR UPDATE SKIP LOCKED";
+                """
+                SELECT json_data FROM task_in_progress tip \
+                INNER JOIN task t ON t.task_id = tip.task_id \
+                WHERE task_def_name = ? FOR UPDATE SKIP LOCKED\
+                """;
         // @formatter:on
 
         return queryWithTransaction(
@@ -439,8 +443,10 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
                 tx -> {
                     // @formatter:off
                     String GET_ALL_WORKFLOWS_FOR_WORKFLOW_DEF =
-                            "SELECT workflow_id FROM workflow_def_to_workflow "
-                                    + "WHERE workflow_def = ? AND date_str BETWEEN ? AND ? FOR SHARE SKIP LOCKED";
+                            """
+                            SELECT workflow_id FROM workflow_def_to_workflow \
+                            WHERE workflow_def = ? AND date_str BETWEEN ? AND ? FOR SHARE SKIP LOCKED\
+                            """;
                     // @formatter:on
 
                     List<String> workflowIds =
@@ -551,8 +557,8 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
             return executions;
         } catch (Exception e) {
             String message =
-                    String.format(
-                            "Unable to get event executions for eventHandlerName=%s, eventName=%s, messageId=%s",
+                    
+                            "Unable to get event executions for eventHandlerName=%s, eventName=%s, messageId=%s".formatted(
                             eventHandlerName, eventName, messageId);
             throw new NonTransientException(message, e);
         }
@@ -605,8 +611,8 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
         // Generate a formatted query string with a variable number of bind params based
         // on taskIds.size()
         final String GET_TASKS_FOR_IDS =
-                String.format(
-                        "SELECT json_data FROM task WHERE task_id IN (%s) AND json_data IS NOT NULL",
+                
+                        "SELECT json_data FROM task WHERE task_id IN (%s) AND json_data IS NOT NULL".formatted(
                         Query.generateInBindings(taskIds.size()));
 
         return query(
@@ -927,8 +933,10 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
 
     private void updateInProgressStatus(Connection connection, TaskModel task, boolean inProgress) {
         String UPDATE_IN_PROGRESS_TASK_STATUS =
-                "UPDATE task_in_progress SET in_progress_status = ?, modified_on = CURRENT_TIMESTAMP "
-                        + "WHERE task_def_name = ? AND task_id = ?";
+                """
+                UPDATE task_in_progress SET in_progress_status = ?, modified_on = CURRENT_TIMESTAMP \
+                WHERE task_def_name = ? AND task_id = ?\
+                """;
 
         execute(
                 connection,
@@ -943,8 +951,10 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
     private boolean insertEventExecution(Connection connection, EventExecution eventExecution) {
 
         String INSERT_EVENT_EXECUTION =
-                "INSERT INTO event_execution (event_handler_name, event_name, message_id, execution_id, json_data) "
-                        + "VALUES (?, ?, ?, ?, ?)";
+                """
+                INSERT INTO event_execution (event_handler_name, event_name, message_id, execution_id, json_data) \
+                VALUES (?, ?, ?, ?, ?)\
+                """;
         int count =
                 query(
                         connection,
@@ -962,13 +972,15 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
     private void updateEventExecution(Connection connection, EventExecution eventExecution) {
         // @formatter:off
         String UPDATE_EVENT_EXECUTION =
-                "UPDATE event_execution SET "
-                        + "json_data = ?, "
-                        + "modified_on = CURRENT_TIMESTAMP "
-                        + "WHERE event_handler_name = ? "
-                        + "AND event_name = ? "
-                        + "AND message_id = ? "
-                        + "AND execution_id = ?";
+                """
+                UPDATE event_execution SET \
+                json_data = ?, \
+                modified_on = CURRENT_TIMESTAMP \
+                WHERE event_handler_name = ? \
+                AND event_name = ? \
+                AND message_id = ? \
+                AND execution_id = ?\
+                """;
         // @formatter:on
 
         execute(
@@ -985,11 +997,13 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
 
     private void removeEventExecution(Connection connection, EventExecution eventExecution) {
         String REMOVE_EVENT_EXECUTION =
-                "DELETE FROM event_execution "
-                        + "WHERE event_handler_name = ? "
-                        + "AND event_name = ? "
-                        + "AND message_id = ? "
-                        + "AND execution_id = ?";
+                """
+                DELETE FROM event_execution \
+                WHERE event_handler_name = ? \
+                AND event_name = ? \
+                AND message_id = ? \
+                AND execution_id = ?\
+                """;
 
         execute(
                 connection,
@@ -1010,11 +1024,13 @@ public class PostgresExecutionDAO extends PostgresBaseDAO
             String executionId) {
         // @formatter:off
         String GET_EVENT_EXECUTION =
-                "SELECT json_data FROM event_execution "
-                        + "WHERE event_handler_name = ? "
-                        + "AND event_name = ? "
-                        + "AND message_id = ? "
-                        + "AND execution_id = ?";
+                """
+                SELECT json_data FROM event_execution \
+                WHERE event_handler_name = ? \
+                AND event_name = ? \
+                AND message_id = ? \
+                AND execution_id = ?\
+                """;
         // @formatter:on
         return query(
                 connection,
